styled detail view, fixed links in footer. next will be fixing the white space under footer

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@ body {
   width: 25rem;
   height: 28rem;
   font-size: 3vh;
+  background-color: slategray;
+  padding: 3vh;
+  margin: 0 auto;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
 }
 
 .testCompanyDisplay {
